# quart-ai

./: .gitignore  README.md  main.py  pyproject.toml
agent/: baseline.py
game/: board.py  constants.py  game_state.py  piece.py
src/: main.py
src/agent/: agent.py  place1_agent.py  place1_select1_agent.py  random_agent.py  select1_agent.py
src/game/: board.py  game.py  piece.py  player.py
src/player/: baseline.py  player.py
src/policies/: __init__.py
test/: game_test.ipynb
