[project]
name = "quart-ai"
version = "0.1.0"
description = "AI for playing the board game QUART"
authors = [
    { name = "pivote1214", email = "yuta.m.12.1214@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
